--- a/my-project/css/variables.css
+++ b/my-project/css/variables.css
@@ -23,7 +23,7 @@ html,
   transition: background-color 0.6s ease;
 }
 
-.footer {
+.footerimage {
   background-image: url(https://c.tenor.com/Qsc8HslGhVEAAAAM/paris-dusan.gif);
   height: 20vh;
 }
