--- a/my-project/css/variables.css
+++ b/my-project/css/variables.css
@@ -72,7 +72,8 @@ body {
 }
 
 .regionname {
-  font-size: 13px;
+  font-size: 15px;
+  --tw-translate-x: 14.1rem;
 }
 
 .hide1 {
@@ -87,7 +88,7 @@ body {
 
 .regionname1 {
   --tw-translate-y: -37.4rem;
-  font-size: 10px;
+  font-size: 13px;
 }
 
 .hide2 {
