--- a/my-project/css/variables.css
+++ b/my-project/css/variables.css
@@ -266,7 +266,9 @@ body {
   border-radius: 20%;
 }
 
-@media (max) {
-  NavigationBar {
+@media (max-width: 1000px) {
+  .Foods {
+    width: 51%;
+    justify-content: space-around;
   }
 } ;
