--- a/my-project/css/variables.css
+++ b/my-project/css/variables.css
@@ -271,6 +271,10 @@ body {
   .Foods {
     width: 51%;
     justify-content: space-around;
+  }
+}
+@media (max-width: 1000px) {
+  body {
     overflow-x: hidden;
   }
-} ;
+}
