--- a/my-project/css/variables.css
+++ b/my-project/css/variables.css
@@ -275,8 +275,9 @@ body {
 }
 
 @media (max-width: 1000px) {
-  .food {
-    width: 75%;
+  .meal {
+    width: 45%;
+    margin-bottom: 144px;
   }
 }
 @media (max-width: 1000px) {
