--- a/my-project/css/variables.css
+++ b/my-project/css/variables.css
@@ -64,7 +64,7 @@ body {
 }
 
 .hide {
-  --tw-translate-y: -40rem;
+  --tw-translate-y: -33rem;
   --tw-translate-x: -30rem;
   display: none;
 }
@@ -104,6 +104,8 @@ body {
 }
 
 .hide3 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -112,6 +114,8 @@ body {
 }
 
 .hide4 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -129,6 +133,8 @@ body {
 }
 
 .hide5 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -142,6 +148,8 @@ body {
 }
 
 .hide6 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -155,6 +163,8 @@ body {
 }
 
 .hide7 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -163,6 +173,8 @@ body {
 }
 
 .hide8 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -181,6 +193,8 @@ body {
 }
 
 .hide9 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -194,6 +208,8 @@ body {
 }
 
 .hide10 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -206,6 +222,8 @@ body {
 }
 
 .hide11 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -218,6 +236,8 @@ body {
 }
 
 .hide12 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -230,6 +250,8 @@ body {
 }
 
 .hide13 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -242,6 +264,8 @@ body {
 }
 
 .hide14 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -254,6 +278,8 @@ body {
 }
 
 .hide15 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -267,6 +293,8 @@ body {
 }
 
 .hide16 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -280,6 +308,8 @@ body {
 }
 
 .hide17 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -293,6 +323,8 @@ body {
 }
 
 .hide18 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -305,6 +337,8 @@ body {
 }
 
 .hide19 {
+  --tw-translate-y: -70rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -317,6 +351,8 @@ body {
 }
 
 .hide20 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
@@ -330,6 +366,8 @@ body {
 }
 
 .hide21 {
+  --tw-translate-y: -40rem;
+  --tw-translate-x: -30rem;
   display: none;
 }
 
