--- a/my-project/css/variables.css
+++ b/my-project/css/variables.css
@@ -405,6 +405,10 @@ body {
     margin-bottom: 0px;
   }
 }
+@media() {
+  .attractions {
+  }
+}
 
 @media (min-width: 1690px) {
   .footerimage:hover {
