--- a/my-project/css/variables.css
+++ b/my-project/css/variables.css
@@ -383,6 +383,62 @@ body {
     max-width: 358px;
   }
 }
+@media (max-width: 1000px) {
+  .meal1 {
+    width: 51%;
+    margin-bottom: 144px;
+    max-width: 358px;
+  }
+}
+@media (max-width: 1000px) {
+  .meal2 {
+    width: 51%;
+    margin-bottom: 144px;
+    max-width: 358px;
+  }
+}
+@media (max-width: 1000px) {
+  .meal3 {
+    width: 51%;
+    margin-bottom: 144px;
+    max-width: 358px;
+  }
+}
+@media (max-width: 1000px) {
+  .meal4 {
+    width: 51%;
+    margin-bottom: 144px;
+    max-width: 358px;
+  }
+}
+@media (max-width: 1000px) {
+  .meal5 {
+    width: 51%;
+    margin-bottom: 144px;
+    max-width: 358px;
+  }
+}
+@media (max-width: 1000px) {
+  .meal6 {
+    width: 51%;
+    margin-bottom: 144px;
+    max-width: 358px;
+  }
+}
+@media (max-width: 1000px) {
+  .meal7 {
+    width: 51%;
+    margin-bottom: 144px;
+    max-width: 358px;
+  }
+}
+@media (max-width: 1000px) {
+  .meal8 {
+    width: 51%;
+    margin-bottom: 144px;
+    max-width: 358px;
+  }
+}
 
 @media (max-width: 600px) {
   .foodimage {
@@ -402,7 +458,7 @@ body {
 @media (max-width: 1200px) {
   .attraction {
     grid-column: span 5;
-    grid-row: span 0.8;
+    grid-row: span 1;
   }
 }
 
