--- a/my-project/css/variables.css
+++ b/my-project/css/variables.css
@@ -69,6 +69,10 @@ body {
   display: none;
 }
 
+.text1 {
+  width: 40rem;
+}
+
 .regionname:hover + .hide {
   display: block;
 }
@@ -80,8 +84,13 @@ body {
 
 .hide1 {
   display: none;
-  --tw-translate-y: -40rem;
+  --tw-translate-y: -33rem;
   --tw-translate-x: -30rem;
+}
+
+.text2 {
+  width: 34rem;
+  font-size: 0.7rem;
 }
 
 .regionname1:hover + .hide1 {
@@ -97,6 +106,11 @@ body {
   display: none;
   --tw-translate-y: -40rem;
   --tw-translate-x: -30rem;
+}
+
+.text3 {
+  width: 40rem;
+  font-size: 0.8rem;
 }
 
 .regionname2:hover + .hide2 {
@@ -125,6 +139,10 @@ body {
   font-size: 12px;
 }
 
+.text4 {
+  width: 40rem;
+}
+
 .regionname5 {
   font-size: 14px;
   --tw-translate-x: 28rem;
@@ -134,6 +152,10 @@ body {
   --tw-translate-y: -40rem;
   --tw-translate-x: -30rem;
   display: none;
+}
+
+.text5 {
+  width: 40rem;
 }
 
 .regionname5:hover + .hide5 {
@@ -149,6 +171,11 @@ body {
   --tw-translate-y: -43rem;
   --tw-translate-x: -30rem;
   display: none;
+}
+
+.text6 {
+  width: 40rem;
+  font-size: 0.9rem;
 }
 
 .regionname6:hover + .hide6 {
@@ -204,8 +231,7 @@ body {
 }
 
 .hide10 {
-  --tw-translate-y: -40rem;
-  --tw-translate-x: -30rem;
+  transform: translate(-30rem, -50rem);
   display: none;
 }
 
@@ -218,8 +244,7 @@ body {
 }
 
 .hide11 {
-  --tw-translate-y: -40rem;
-  --tw-translate-x: -30rem;
+  transform: translate(-30rem, -50rem);
   display: none;
 }
 
@@ -259,8 +284,7 @@ body {
 }
 
 .hide14 {
-  --tw-translate-y: -40rem;
-  --tw-translate-x: -30rem;
+  transform: translate(-30rem, -57rem);
   display: none;
 }
 
@@ -273,8 +297,7 @@ body {
 }
 
 .hide15 {
-  --tw-translate-y: -40rem;
-  --tw-translate-x: -30rem;
+  transform: translate(-30rem, -59rem);
   display: none;
 }
 
@@ -288,8 +311,7 @@ body {
 }
 
 .hide16 {
-  --tw-translate-y: -40rem;
-  --tw-translate-x: -30rem;
+  transform: translate(-30rem, -63rem);
   display: none;
 }
 
@@ -303,8 +325,7 @@ body {
 }
 
 .hide17 {
-  --tw-translate-y: -40rem;
-  --tw-translate-x: -30rem;
+  transform: translate(-30rem, -65rem);
   display: none;
 }
 
@@ -318,8 +339,7 @@ body {
 }
 
 .hide18 {
-  --tw-translate-y: -40rem;
-  --tw-translate-x: -30rem;
+  transform: translate(-30rem, -67rem);
   display: none;
 }
 
@@ -346,8 +366,7 @@ body {
 }
 
 .hide20 {
-  --tw-translate-y: -40rem;
-  --tw-translate-x: -30rem;
+  transform: translate(-40rem, -70rem);
   display: none;
 }
 
