--- a/my-project/css/variables.css
+++ b/my-project/css/variables.css
@@ -483,6 +483,14 @@ body {
 @media (max-width: 1200px) {
   .Attractionimage {
     width: 100%;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+}
+@media (max-width: 1200px) {
+  .attractiontext {
+    font-size: 10px;
+    line-height: 16px;
   }
 }
 
